fix: add letter-spacing

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ li {
     line-height: 30px;
     display: flex;
     text-align: stretch;
-    letter-spacing: -0.05px;
+    letter-spacing: -0.21px;
     text-align: justify;
    
     
@@ -271,6 +271,7 @@ body {
     line-height: 30px;
     font-weight: 300;
     text-align: justify;
+    letter-spacing: -0.21px
 }
 
 .nav-bar {
@@ -546,6 +547,7 @@ li.twelve{
     line-height: 30px;
     font-weight: 300;
     text-align: justify;
+    letter-spacing: -0.21px
     
 }
 
